# dograh

./: .dockerignore  .gitignore  .gitmodules  .release-please-manifest.json  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FUTURE_TOOLS.md  GIT_WORKFLOW.md  PRIVATE_DEPLOYMENT_PLAN.md  README.it-IT.md  README.ja-JP.md  README.md  README.zh-CN.md  REMOTE_DEPLOYMENT.md  SECURITY.md  UPSTREAM_PULL.md  bash.exe.stackdump  build-and-test-images.sh  docker-compose-local.yaml  docker-compose.dev.yaml  docker-compose.dokploy.yaml  docker-compose.infra.yaml  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.test.yaml  docker-compose.yaml  future_plan.md  generate-certs.sh  generate_certificate.sh  how_to_setup.md  nginx.conf  package-lock.json  package.json  pyproject.toml  release-please-config.json  remote_up.sh  start-https.sh  (+3 more)
api/: .env.example  .env.test.example  AGENTS.md  Dockerfile  Dockerfile.mps  app.py  constants.py  enums.py  logging_config.py  pyproject.toml  requirements.dev.txt  requirements.txt
api/alembic/: env.py
api/db/: agent_trigger_client.py  api_key_client.py  campaign_client.py  db_client.py  did_workflow_mapping_client.py  filters.py  knowledge_base_client.py  marketplace_seed.py  models.py  organization_client.py  organization_configuration_client.py  organization_usage_client.py  payment_client.py  telephony_configuration_client.py  telephony_phone_number_client.py  tool_client.py  user_client.py  webhook_delivery_client.py  (+4 more)
dograh-livekit/: .env.example  .gitignore  Dockerfile  pyproject.toml
(+1203 files in other folders)
